Fixed width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ li {
     z-index: 3;
     display: block;
     position: absolute;
-    right: 0;
+    right: 15px;
     top: 30px;
 
     width: 30px;
@@ -175,7 +175,7 @@ li {
 }
 
 .main-text-section, .comp-section {
-  width: 80vw;
+  width: 80%;
   max-width: 1000px;
   min-height: 100vh;
   padding-bottom: 10em;
