--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,7 @@
 
 html {
   scroll-snap-type: y mandatory;
-  margin: 0;
-  padding: 0;
+  width: auto;
 }
 
 body {
